--- a/blogs/Scientific Foundation Model.html
+++ b/blogs/Scientific Foundation Model.html
@@ -47,32 +47,53 @@
 
 <section class="mt-5 pt-5 blog-content">
     <div class="container">
-        <h2>Scientific Foundation Models in Manufacturing</h2>
+        <h2>Scientific Foundation Models: Transforming Research Across Disciplines</h2>
         <p class="lead">Author: Vispi Nevile Karkaria</p>
 
         <h3>Introduction</h3>
         <p>
-            Scientific foundation models integrate large-scale data sources with domain-specific knowledge to enhance predictive capabilities in manufacturing. Unlike traditional models focused on specific tasks, these models leverage multi-modal and multi-fidelity data to improve accuracy and generalizability.
+            Foundation models are changing scientific research, offering powerful AI-driven approaches to discovery, optimization, and prediction across multiple domains. Unlike traditional task-specific models, <strong>Scientific Foundation Models (SciFMs)</strong> are pre-trained on vast datasets and fine-tuned for specialized applications, enabling cross-domain knowledge transfer and accelerating breakthroughs in fields such as physics, biology, chemistry, and climate science.
         </p>
 
-        <div class="image-container">
+        <h3>How SciFMs Are Changing Scientific Discovery</h3>
+        <ul>
+            <li><strong>Physics & Engineering:</strong> AI-driven surrogate models dramatically reduce the computational cost of solving physical systems, from fluid dynamics to climate simulations.</li>
+            <li><strong>Chemistry & Materials Science:</strong> Models like MatterGen accelerate materials and drug discovery, predicting new molecular structures with desired properties at an unprecedented speed.</li>
+            <li><strong>Biology & Medicine:</strong> AI models such as AlphaFold2 and protein language models (PLMs) are revolutionizing genomics, protein function prediction, and drug design.</li>
+            <li><strong>Environmental Science:</strong> AI-powered weather and climate models improve forecasting accuracy, extreme event prediction, and sustainable resource management.</li>
+        </ul>
+
+        <h3>Key Advancements & Challenges</h3>
+        <ul>
+            <li><strong>Multimodal AI:</strong> Integrating text, images, simulations, and numerical data for more comprehensive scientific insights.</li>
+            <li><strong>Computational Scaling:</strong> Large models require massive computational resources, but optimization techniques like LoRA and adapter-based fine-tuning are helping make them more accessible.</li>
+            <li><strong>Interpretability & Trust:</strong> Models often act as "black boxes," making it crucial to develop more interpretable AI frameworks for scientific reasoning.</li>
+            <li><strong>Autonomous Discovery:</strong> The next frontier involves AI-assisted hypothesis generation and experimental design, moving towards truly autonomous scientific agents.</li>
+        </ul>
+
+        <h3>The Future of AI-Driven Science</h3>
+        <p>
+            Scientific Foundation Models are expected to play a critical role in research by supporting data-driven discovery and computational modeling. Improvements in interpretability, computational efficiency, and ethical considerations will enhance their integration into automated workflows and interdisciplinary research. The combination of AI-driven pattern recognition and domain-specific modeling provides a structured approach to analyzing complex scientific datasets, improving predictive accuracy and enabling more scalable simulations.
+        </p>
+
+        <h3>Application in Manufacturing</h3>
+        <p>
+            In this figure, we introduce the concept of the <strong>scientific foundation model</strong> in manufacturing, which combines the strengths of specialized local models with the power of massive external data. On the left, traditional AI models focus on specific tasks such as predicting porosity, melt pool depth, melt pool temperature, and microstructure in manufacturing processes. While effective in their individual applications, these models often lack the ability to generalize across different datasets and materials, limiting their scalability.
+        </p>
+
+
+          <div class="image-container">
             <img src="https://vispikarkaria.github.io/blogs/Manufacturing_foundation_model.png" alt="Manufacturing Foundation Model">
             <p class="image-caption">Figure: Overview of a Manufacturing Foundation Model.</p>
         </div>
 
-        <h3>Applications in Manufacturing</h3>
+      
         <p>
-            Foundation models are applied in various manufacturing processes, such as predictive maintenance, defect detection, and process optimization. By integrating structured and unstructured data, these models improve decision-making in production environments.
+            On the right, the <strong>Foundation Model</strong> leverages large-scale, multi-source data to learn broad and complex patterns, providing a more generalizable and interpretable approach. By integrating both local manufacturing data and external sources, it creates a unified framework that can be fine-tuned for specific tasks, such as optimizing melt pool temperature in welding.
         </p>
 
-        <h3>Technical Advantages</h3>
         <p>
-            These models utilize deep learning techniques such as transformer architectures and neural operators to process complex relationships in sensor data, simulations, and experimental measurements. Their ability to learn from diverse sources enhances scalability across different manufacturing conditions.
-        </p>
-
-        <h3>Challenges and Future Directions</h3>
-        <p>
-            Despite their advantages, foundation models require significant computational resources and careful calibration to ensure interpretability. Future work involves improving efficiency and integrating domain-specific constraints for more reliable deployment in industrial applications.
+            A key advantage of the foundation model is its ability to learn from <strong>multi-modal and multi-fidelity data</strong>, combining sensor readings, high-fidelity simulations, and approximations to improve robustness across different conditions. This adaptability enhances precision in manufacturing applications, improving predictive maintenance, defect detection, and process optimization. By merging AI-driven insights with physics-based models, this approach enables <strong>more scalable and intelligent digital twins for manufacturing</strong>.
         </p>
     </div>
 </section>
