Increasing font size

--- a/blogs/Scientific Foundation Model.html
+++ b/blogs/Scientific Foundation Model.html
@@ -26,6 +26,7 @@
         }
         .blog-content {
             color: #e0e0e0;
+            font-size: 1.2rem; /* Increased font size */
         }
         .blog-content h2, .blog-content h3 {
             color: #e0e0e0;
