--- a/blogs/Scientific Foundation Model.html
+++ b/blogs/Scientific Foundation Model.html
@@ -45,7 +45,7 @@
 
 <body>
 
-<section class="mt-5 pt-5 blog-content">
+<section class="mt-5 pt-5 blog-content" style="font-size: 1.2rem;"></section>
     <div class="container">
 
         <!-- Back Button -->
