--- a/blogs/Scientific Foundation Model.html
+++ b/blogs/Scientific Foundation Model.html
@@ -113,7 +113,6 @@
     <span id="likeCount" style="margin-left: 10px;">0</span> Likes
 </section>
 
-
 <!-- Simple Comment Section -->
 <div class="container mt-5">
     <h3>Leave a Comment</h3>
@@ -167,7 +166,7 @@
                 headers: {
                     'Content-Type': 'application/x-www-form-urlencoded',
                 },
-                body: 'comment=' + encodeURIComponent(commentInput.value.trim()),
+                body: 'comment=' + encodeURIComponent(commentInput.value.trim()) + '&email=vispikarkaria127@gmail.com',
             })
             .then(response => response.text())
             .then(data => {
