--- a/index.html
+++ b/index.html
@@ -265,13 +265,18 @@ a        .edu-item h3, .edu-item h4 {
                     
                             <div class="card edu-item">
                               <div class="card-body">
-                                <h3>Federated Learning Enabled Foundational Models with Attention-based Neural Operator</h3>
+                                <h3>Attention-Based Spatial Temporal Neural Operator for Spatio-Temporal Learning</h3>
                                 <p><b>2024–Present</b></p>
                                 <p>Algorithms: Federated Learning, Neural Operator, Attention, Foundational Model</p>
                                 <ul>
                                   <li>Developed an Attention-based Neural Operator improving neural-operator accuracy by 25% with temporal-spatial analysis.</li>
                                   <li>Adapted into a foundational model with federated learning for secure, scalable cross-application transfer.</li>
                                 </ul>
+                                <p>
+                                  <a href="https://github.com/Vispikarkaria/ASNO" target="_blank" class="btn btn-sm btn-outline-info">
+                                    View on GitHub
+                                  </a>
+                                </p>
                               </div>
                             </div>
                     
