--- a/index.html
+++ b/index.html
@@ -294,13 +294,18 @@ a        .edu-item h3, .edu-item h4 {
                     
                             <div class="card edu-item">
                               <div class="card-body">
-                                <h3>Transformer-based Digital Twin Framework for Time Series Optimization</h3>
+                                <h3>Bayesian Optimization for Time Series Process Optimization</h3>
                                 <p><b>2022–2024</b></p>
                                 <p>Algorithms: Deep Learning, Big Data, Transformers, Bayesian Optimization</p>
                                 <ul>
                                   <li>Reduced prediction time in Additive Manufacturing with a transformer-based surrogate model.</li>
                                   <li>Quantified predictive uncertainty and created BOTS (Bayesian Optimization of Time Series) for time-series optimization.</li>
                                 </ul>
+                                <p>
+                                  <a href="https://github.com/Vispikarkaria/Bayesian-Optimization-for-Time-Series-Process-Optimization-" target="_blank" class="btn btn-sm btn-outline-info">
+                                    View on GitHub
+                                  </a>
+                                </p>
                               </div>
                             </div>
                     
